--- a/extensions/raycast-ocr/package.json
+++ b/extensions/raycast-ocr/package.json
@@ -138,12 +138,14 @@
     "@raycast/utils": "^1.17.0"
   },
   "devDependencies": {
+    "@raycast/eslint-config": "^2.1.1",
+    "@raycast/eslint-plugin": "^2.1.1",
     "@types/node": "^20.14.9",
     "@types/react": "18.3.12",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.3.2",
     "react": "18.3.1",
     "typescript": "^5.5.3"
